--- a/tests/lib/gtest-1.8.0/googlemock/CHANGES
+++ b/tests/lib/gtest-1.8.0/googlemock/CHANGES
@@ -11,7 +11,7 @@ Changes for 1.7.0:
 * Improvement: when compiled by a C++11 compiler, matchers
   ElementsAreArray() can accept an initializer list.
 * Improvement: when exceptions are enabled, a mock method with no
-  default action now throws instead crashing the out.
+  default action now throws instead crashing the test.
 * Improvement: added class testing::StringMatchResultListener to aid
   definition of composite matchers.
 * Improvement: function return types used in MOCK_METHOD*() macros can
@@ -76,7 +76,7 @@ Changes for 1.5.0:
  * Added gmock_all_test.cc for compiling most Google Mock tests
    in a single file.
  * Significantly cleaned up compiler warnings.
- * Bug fixes, better out coverage, and implementation clean-ups.
+ * Bug fixes, better test coverage, and implementation clean-ups.
 
  Potentially breaking changes:
 
