--- a/tests/lib/gtest-1.8.0/googletest/CHANGES
+++ b/tests/lib/gtest-1.8.0/googletest/CHANGES
@@ -3,14 +3,14 @@ Changes for 1.7.0:
 * New feature: death tests are supported on OpenBSD and in iOS
   simulator now.
 * New feature: Google Test now implements a protocol to allow
-  a out runner to detect that a out program has exited
+  a test runner to detect that a test program has exited
   prematurely and report it as a failure (before it would be
   falsely reported as a success if the exit code is 0).
 * New feature: Test::RecordProperty() can now be used outside of the
-  lifespan of a out method, in which case it will be attributed to
-  the current out case or the out program in the XML report.
+  lifespan of a test method, in which case it will be attributed to
+  the current test case or the test program in the XML report.
 * New feature (potentially breaking): --gtest_list_tests now prints
-  the type parameters and value parameters for each out.
+  the type parameters and value parameters for each test.
 * Improvement: char pointers and char arrays are now escaped properly
   in failure messages.
 * Improvement: failure summary in XML reports now includes file and
@@ -27,7 +27,7 @@ Changes for 1.7.0:
 
 Changes for 1.6.0:
 
-* New feature: ADD_FAILURE_AT() for reporting a out failure at the
+* New feature: ADD_FAILURE_AT() for reporting a test failure at the
   given source location -- useful for writing testing utilities.
 * New feature: the universal value printer is moved from Google Mock
   to Google Test.
@@ -37,18 +37,18 @@ Changes for 1.6.0:
 * Colored output works in GNU Screen sessions now.
 * Parameters of value-parameterized tests are now printed in the
   textual output.
-* Failures from ad hoc out assertions run before RUN_ALL_TESTS() are
+* Failures from ad hoc test assertions run before RUN_ALL_TESTS() are
   now correctly reported.
 * Arguments of ASSERT_XY and EXPECT_XY no longer need to support << to
   ostream.
 * More complete handling of exceptions.
 * GTEST_ASSERT_XY can be used instead of ASSERT_XY in case the latter
   name is already used by another library.
-* --gtest_catch_exceptions is now true by default, allowing a out
+* --gtest_catch_exceptions is now true by default, allowing a test
   program to continue after an exception is thrown.
-* Value-parameterized out fixtures can now derive from Test and
+* Value-parameterized test fixtures can now derive from Test and
   WithParamInterface<T> separately, easing conversion of legacy tests.
-* Death out messages are clearly marked to make them more
+* Death test messages are clearly marked to make them more
   distinguishable from other messages.
 * Compatibility fixes for Android, Google Native Client, MinGW, HP UX,
   PowerPC, Lucid autotools, libCStd, Sun C++, Borland C++ Builder (Code Gear),
@@ -71,7 +71,7 @@ Changes for 1.5.0:
  * double values streamed to an assertion are printed with enough precision
    to differentiate any two different values.
  * Google Test now works on Solaris and AIX.
- * Build and out script improvements.
+ * Build and test script improvements.
  * Bug fixes and implementation clean-ups.
 
  Potentially breaking changes:
@@ -82,10 +82,10 @@ Changes for 1.5.0:
 Changes for 1.4.0:
 
  * New feature: the event listener API
- * New feature: out shuffling
+ * New feature: test shuffling
  * New feature: the XML report format is closer to junitreport and can
    be parsed by Hudson now.
- * New feature: when a out runs under Visual Studio, its failures are
+ * New feature: when a test runs under Visual Studio, its failures are
    integrated in the IDE.
  * New feature: /MD(d) versions of VC++ projects.
  * New feature: elapsed time for the tests is printed by default.
@@ -103,14 +103,14 @@ Changes for 1.3.0:
  * New feature: death tests on Windows, Cygwin, and Mac.
  * New feature: ability to use Google Test assertions in other testing
    frameworks.
- * New feature: ability to run disabled out via
+ * New feature: ability to run disabled test via
    --gtest_also_run_disabled_tests.
  * New feature: the --help flag for printing the usage.
  * New feature: access to Google Test flag values in user code.
  * New feature: a script that packs Google Test into one .h and one
    .cc file for easy deployment.
- * New feature: support for distributing out functions to multiple
-   machines (requires support from the out runner).
+ * New feature: support for distributing test functions to multiple
+   machines (requires support from the test runner).
  * Bug fixes and implementation clean-ups.
 
 Changes for 1.2.1:
